新模板配置

--- a/generator/src/main/resources/config.properties
+++ b/generator/src/main/resources/config.properties
@@ -1,17 +1,17 @@
+base = mysql
 driverClassName = oracle.jdbc.driver.OracleDriver
-url =  jdbc:oracle:thin:@58.58.226.78:1521:orcl
-username = system
-password = 12345
+url =  jdbc:mysql://db1.dev1.yiyao.cc:13306/mall_user_map?useUnicode=true&characterEncoding=UTF-8&ssl=false
+username = mall_root
+password = 20151118
 
-database = orcl
-tableName= ARRSCHDT
-domainObjectName = ArRschdt
+tableName= sca_transaction
+domainObjectName = ScaTransaction
 
 
 filePath = E://generator//src//main//resources
 
-config.model = E://git//sca-yabao-data-exchange//src//main//java//sca.yabao.data.exchange//model//{domainObjectName}.java
-config.mapper = E://git//sca-yabao-data-exchange//src//main//resource//mybatis//{domainObjectName}Mapper.xml
+#config.model = E://git//sca-yabao-data-exchange//src//main//java//sca.yabao.data.exchange//model//{domainObjectName}.java
+config.mapper = E://git//sca-yabao-data-exchange//src//main//resources//mybatis//{domainObjectName}Mapper.xml
 config.dao = E://git//sca-yabao-data-exchange//src//main//java//sca.yabao.data.exchange//dao//{domainObjectName}Dao.java
 #config.service = F://xiao-huai-app//spring-boot-demo//src//main//java//com//demo//service//{domainObjectName}Service.java
 #config.serviceImpl = F://xiao-huai-app//spring-boot-demo//src//main//java//com//demo//service//impl//{domainObjectName}ServiceImpl.java#
