--- a/generator/src/main/resources/config.properties
+++ b/generator/src/main/resources/config.properties
@@ -1,16 +1,16 @@
 base = mysql
 driverClassName = oracle.jdbc.driver.OracleDriver
-url =  jdbc:mysql://db1.dev1.yiyao.cc:13306/mall_user_map?useUnicode=true&characterEncoding=UTF-8&ssl=false
-username = mall_root
-password = 20151118
+url =  jdbc:mysql://localhost:13306/mall_user_map?useUnicode=true&characterEncoding=UTF-8&ssl=false
+username = root
+password = 1234
 
 tableName= sca_transaction
 domainObjectName = ScaTransaction
 
+#Éú³ÉÆ÷resourcesÂ·¾¶
+filePath = E://github//generator//generator//src//main//resources
 
-filePath = E://generator//src//main//resources
-
-#config.model = E://git//sca-yabao-data-exchange//src//main//java//sca.yabao.data.exchange//model//{domainObjectName}.java
+config.model = E://git//sca-yabao-data-exchange//src//main//java//sca.yabao.data.exchange//model//{domainObjectName}.java
 config.mapper = E://git//sca-yabao-data-exchange//src//main//resources//mybatis//{domainObjectName}Mapper.xml
 config.dao = E://git//sca-yabao-data-exchange//src//main//java//sca.yabao.data.exchange//dao//{domainObjectName}Dao.java
 #config.service = F://xiao-huai-app//spring-boot-demo//src//main//java//com//demo//service//{domainObjectName}Service.java
