--- a/generator/pom.xml
+++ b/generator/pom.xml
@@ -18,6 +18,13 @@
             <artifactId>ojdbc7</artifactId>
             <version>12.1.0.2.0</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>6.0.6</version>
+        </dependency>
+
     </dependencies>
 
     <properties>
