--- a/generator/pom.xml
+++ b/generator/pom.xml
@@ -13,11 +13,11 @@
             <artifactId>freemarker</artifactId>
             <version>2.3.8</version>
         </dependency>
-        <dependency>
+      <!--  <dependency>
             <groupId>cn.easyproject</groupId>
             <artifactId>ojdbc7</artifactId>
             <version>12.1.0.2.0</version>
-        </dependency>
+        </dependency>-->
         <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
         <dependency>
             <groupId>mysql</groupId>
