--- a/generator/src/main/resources/config.properties
+++ b/generator/src/main/resources/config.properties
@@ -1,11 +1,11 @@
 base = mysql
-driverClassName = oracle.jdbc.driver.OracleDriver
-url =  jdbc:mysql://localhost:13306/mall_user_map?useUnicode=true&characterEncoding=UTF-8&ssl=false
+driverClassName = com.mysql.jdbc.Driver
+url =  jdbc:mysql://111.85.91.179:22337/test?useUnicode=true&characterEncoding=UTF-8&ssl=false
 username = root
-password = 1234
+password = zkyc
 
-tableName= sca_transaction
-domainObjectName = ScaTransaction
+tableName= user
+domainObjectName = User
 
 #Éú³ÉÆ÷resourcesÂ·¾¶
 filePath = E://github//generator//generator//src//main//resources
